welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:14: error: type mismatch;
 found   : Unit
 required: Int
  if(num==13){return 6}
  ^