welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  if(num==1){return 1}
  if(num==2){return 2}
  if(num==3){return 2}
  if(num==4){return 3}
  if(num==5){return 3}
  if(num==6){return 4}
  if(num==7){return 4}
  if(num==8){return 4}
  if(num==9){return 5}
  if(num==10){return 5}
  if(num==11){return 5}
  if(num==12){return 6}
  if(num==13){return 6}
}